# gaia

./: .bazelrc  .clang-format  .clang_complete  .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE  README.md  WORKSPACE  annotated.html  asio_2accept__server_8cc_source.html  asio_2accept__server_8h_source.html  asio_2fiber__socket_8cc_source.html  asio_2fiber__socket_8h_source.html  asio_2prebuilt__asio_8cc_source.html  asio__stream__adapter_8h_source.html  asio__utils_8h_source.html  aws_8cc_source.html  aws_8h_source.html  beast__rj__utils_8h_source.html  blaze.sh  block__compressor_8cc_source.html  block__compressor_8h_source.html  bzip__source_8cc_source.html  bzip__source_8h_source.html  channel_8cc_source.html  channel_8h_source.html  classExactFloat-members.html  classExactFloat.html  classExactFloat_1_1BigNum-members.html  classExactFloat_1_1BigNum.html  classExactFloat__coll__graph.map  classExactFloat__coll__graph.md5  classMathUtil-members.html  classMathUtil.html  (+1188 more)
base/: BUILD  CMakeLists.txt  MPMCQueue.h  ProducerConsumerQueue.h  RWSpinLock.h  RWSpinLock_test.cc  arena_test.cc  array.h  array_test.cc  atomic_wrapper.h  bits.cc  bits.h  bits_test.cc  casts.h  chunked_array.h  coder.cc  coder.h  coder_test.cc  counting_allocator.h  crc32c.cc  crc32c.h  crc32c_test.cc  cxx_test.cc  endian.h  event_count.h  event_count_test.cc  fixed.h  flat_arrays_vector.h  flit.h  flit_test.cc  function2.hpp  gtest.h  gtest_main.cc  hash.cc  hash.h  hash_test.cc  histogram.cc  histogram_test.cc  init.cc  init.h  (+30 more)
doc/: CMakeLists.txt  Doxyfile.in  README.md  async_model.md  docker_build.md  header.html.in  mainpage.md  mr3.md
examples/: CMakeLists.txt  asio.cc  asio_co.cc  asio_fibers.cc  boost_fibers.cc  fiber_demo.cc  file_read.cc  gcs.cc  gcs_demo.cc  gsod_group.cc  http_client_tool.cc  io_context_pool.cc  io_context_pool.h  movies_join.cc  mr3.cc  mr_demo.cc  mr_read_test.cc  mrgrep.cc  osmium_road_length.cc  py3_subinterpreter.cc  s3_demo.cc
examples/pingserver/: CMakeLists.txt  ping_command.cc  ping_command.h  ping_epoll_server.cc  ping_iouring_server.cc  ping_server.cc  ping_sync_server.cc  resp_parser.cc  resp_parser.h
examples/redis/: CMakeLists.txt  redis_command.cc  redis_command.h  redis_toy_server.cc  resp_connection_handler.cc  resp_connection_handler.h  resp_parser.cc  resp_parser.h
examples/wordcount/: CMakeLists.txt  WordCount.java  warc_parse.cc  word_count.cc
file/: BUILD  CMakeLists.txt  compressors.cc  compressors.h  fiber_file.cc  fiber_file.h  file.cc  file.h  file_test.cc  file_util.cc  file_util.h  filesource.cc  filesource.h  gzip_file.cc  gzip_file.h  list_file.cc  list_file.h  list_file2.cc  list_file_format.h  list_file_format2.h  list_file_py.cc  list_file_reader.cc  list_file_reader.h  list_file_test.cc  lst2_impl.cc  lst2_impl.h  lz4_compressor.cc  lz4_file.cc  lz4_file.h  meta_map_block.cc  meta_map_block.h  proto_writer.cc  proto_writer.h  proto_writer_test.cc  proto_writer_test.proto  s3_file.cc  s3_file.h  test_util.cc  test_util.h
mr/: CMakeLists.txt  do_context.h  joiner_executor.cc  joiner_executor.h  local_runner.cc  local_runner.h  local_runner_test.cc  mapper_executor.cc  mapper_executor.h  mr.cc  mr.h  mr3.proto  mr_executor.cc  mr_executor.h  mr_main.cc  mr_main.h  mr_pb.cc  mr_pb.h  mr_test.cc  mr_types.h  operator_executor.cc  operator_executor.h  output.h  pipeline.cc  pipeline.h  pipeline_executor.cc  pipeline_executor.h  ptable.h  readme.md  runner.h  test_utils.cc  test_utils.h
mr/impl/: CMakeLists.txt  dest_file_set.cc  dest_file_set.h  freq_map_wrapper.cc  freq_map_wrapper.h  local_context.cc  local_context.h  table_impl.h
strings/: BUILD  CMakeLists.txt  ascii_ctype.cc  charmap.h  charset.cc  charset.h  escaping.cc  escaping.h  fastmem.h  hash.h  human_readable.cc  human_readable.h  join.cc  join.h  memutil.cc  memutil.h  numbers.cc  numbers.h  numbers_test.cc  range.cc  range.h  range_test.cc  slice.h  split.cc  split.h  split_internal.h  strcat.cc  strcat.h  strcat_test.cc  stringpiece.cc  stringpiece.h  stringprintf.cc  stringprintf.h  strip.cc  strip.h  strpmr.cc  strpmr.h  strpmr_test.cc  strtoint.cc  strtoint.h  (+7 more)
strings/utf8/: rune.c
util/: BUILD  CMakeLists.txt  asio_stream_adapter.h  bzip_source.cc  bzip_source.h  executor.cc  executor.h  executor_test.cc  fiberqueue_threadpool.cc  fiberqueue_threadpool.h  fibers_done.h  fibers_ext.cc  fibers_ext.h  mimalloc_test.cc  pb2json.cc  pb2json.h  pb2json_test.cc  proc_stats.cc  proc_stats.h  sinksource.cc  sinksource.h  sinksource_test.cc  sp_task_pool.cc  sp_task_pool.h  sp_task_pool_test.cc  spawn.cc  spawn.h  sq_threadpool.cc  sq_threadpool.h  sq_threadpool_test.cc  status.cc  status.h  status.proto  sync_stream_interface.h  zlib_source.cc  zlib_source.h  zstd_sinksource.cc  zstd_sinksource.h
util/asio/: CMakeLists.txt  accept_server.cc  accept_server.h  asio_utils.h  channel.cc  channel.h  client_channel.cc  client_channel.h  connection.cc  connection.h  connection_handler.cc  connection_handler.h  error.cc  error.h  fiber_socket.cc  fiber_socket.h  fiber_socket_test.cc  glog_asio_sink.cc  glog_asio_sink.h  io_context.cc  io_context.h  io_context_pool.cc  io_context_pool.h  io_context_test.cc  periodic_task.cc  periodic_task.h  periodic_task_test.cc  prebuilt_asio.cc  reconnectable_socket.cc  reconnectable_socket.h  reconnectable_socket_test.cc  yield.cc  yield.h
util/aws/: CMakeLists.txt  aws.cc  aws.h  s3.cc  s3.h  s3_test.cc
util/coding/: CMakeLists.txt  block_compressor.cc  block_compressor.h  block_compressor_test.cc  double_compressor.cc  double_compressor.h  double_compressor_test.cc  fixed.h  sequence_array.cc  sequence_array.h  set_encoder.cc  set_encoder.h  set_encoder_test.cc
util/fibers/: CMakeLists.txt  condition_variable.h  event_count.h  fiberqueue_threadpool.cc  fiberqueue_threadpool.h  fibers_ext.cc  fibers_ext.h  fibers_ext_test.cc  simple_channel.h
util/gce/: CMakeLists.txt  gce.cc  gce.h  gcs.cc  gcs.h  gcs_read_file.cc  gcs_read_file.h  gcs_write_file.cc
util/html/: main.js  (+3 more)
(+141 files in other folders)
